# RobTek_Sem2_Vision

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  kinectpointcloud.cpp  manifest.xml  roskinectvision.cpp
images/: kinect_depth.txt  kinect_depth_sample.txt
src/: kinectpointcloud.cpp
